update userprofile (demo version)